// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing App  Testing Message  should should render correctly 1`] = `
<div>
  Hello World
  <div />
  <p />
</div>
`;

exports[`Testing App  should should render correctly 1`] = `
<div>
  <div>
    Hello World
    <div>
      Han Solo
    </div>
    <p>
      4
    </p>
  </div>
</div>
`;
